# git-adr

./: .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  SECURITY.md  deny.toml  pyproject.toml  rustfmt.toml
.claude/: documentation-review.local.md
.claude-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/instructions/: adr-steward.instructions.md  ci-whisperer.instructions.md  code-surgeon.instructions.md  docsmith.instructions.md  pr-concierge.instructions.md  repo-guide.instructions.md  security-sentry.instructions.md  test-navigator.instructions.md
.github/scripts/: validate-skill.py
.github/workflows/: build-binaries.yml  ci.yml  deploy-docs.yml  release.yml  test-binary.yml
docs/: ADR_FORMATS.md  ADR_PRIMER.md  COMMANDS.md  CONFIGURATION.md  HOOKS_GUIDE.md  README.md  SDLC_INTEGRATION.md  SHELL_COMPLETION.md  git-adr-product-brief.md  git-adr-skill.md
docs/man/: git-adr-init.1.md  git-adr-new.1.md  git-adr-rm.1.md  git-adr-sync.1.md  git-adr.1.md
docs/spec/active/: python-to-rust-migration-workplan.md
docs/spec/active/2025-12-15-git-adr-cli/: ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md
docs/spec/active/2025-12-15-git-adr-skill/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md
docs/spec/active/2025-12-15-github-issues-13-14/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md
docs/spec/active/2025-12-16-git-adr-claude-skill/: ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md  RESEARCH_NOTES.md
docs/spec/active/2025-12-16-git-adr-skill-release/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md
docs/spec/active/2025-12-16-pyinstaller-binary/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md
docs/spec/archived/2025-12-16-pyinstaller-binary/: RETROSPECTIVE.md
docs/spec/completed/2025-12-15-decider-display-remediation/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md  RETROSPECTIVE.md
docs/spec/completed/2025-12-15-git-adr-cli/: CHANGELOG.md  DECISIONS.md  PROGRESS.md  README.md  RESEARCH_NOTES.md
docs/spec/completed/2025-12-15-git-hooks-sdlc-integration/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md  RETROSPECTIVE.md
docs/spec/completed/2025-12-15-github-issues-13-14/: .prompt-log.json  CHANGELOG.md  PROGRESS.md  README.md  REQUIREMENTS.md  RETROSPECTIVE.md
docs/spec/completed/2025-12-16-git-adr-issue-cli/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md  RESEARCH_NOTES.md  RETROSPECTIVE.md
docs/spec/completed/2025-12-16-pyinstaller-binary/: CHANGELOG.md  README.md
pyinstaller/: git-adr.spec
script/: install-binary.sh  install.sh
scripts/: build-binary.sh  bump-version.py  smoke-test.sh
share/man/man1/: git-adr-init.1  git-adr-new.1  git-adr-rm.1  git-adr-sync.1  git-adr.1
skills/: git-adr.skill
skills/git-adr/: SKILL.md
skills/git-adr/references/: best-practices.md  commands.md  search-patterns.md  workflows.md
skills/git-adr/references/formats/: business-case.md  madr.md  y-statement.md
skills/git-adr/workflows/: decision-capture.md  decision-recall.md  session-start.md
src/: lib.rs  main.rs
src/ai/: mod.rs  provider.rs  service.rs
src/cli/: ai.rs  artifacts.rs  attach.rs  ci.rs  config.rs  convert.rs  edit.rs  export.rs  hooks.rs  import.rs  init.rs  link.rs  list.rs  log.rs  metrics.rs  mod.rs  new.rs  onboard.rs  report.rs  rm.rs  search.rs  show.rs  stats.rs  supersede.rs  sync.rs  templates.rs  wiki.rs
src/core/: adr.rs  config.rs  git.rs  index.rs  mod.rs  notes.rs  templates.rs
src/export/: docx.rs  html.rs  json.rs  mod.rs
src/git_adr/: __init__.py  cli.py  hooks.py
src/git_adr/ai/: __init__.py  service.py
src/git_adr/commands/: __init__.py  _editor.py  _shared.py  ai_ask.py  ai_draft.py  ai_suggest.py  ai_summarize.py  artifact_get.py  artifact_rm.py  artifacts.py  attach.py  ci.py  config.py  convert.py  edit.py  export.py  hook.py  hooks_cli.py  import_.py  init.py  issue.py  link.py  list.py  log.py  metrics.py  new.py  onboard.py  report.py  rm.py  search.py  show.py  stats.py  supersede.py  sync.py  templates_cli.py  wiki_init.py  wiki_sync.py
src/git_adr/core/: __init__.py  adr.py  config.py  gh_client.py  git.py  index.py  issue.py  issue_template.py  notes.py  templates.py  utils.py
src/git_adr/formats/: __init__.py
src/git_adr/templates/: __init__.py
src/git_adr/templates/ci/: github-actions-sync.yml.j2  github-actions-validate.yml.j2  gitlab-ci-sync.yml.j2
src/git_adr/templates/governance/: codeowners.j2  issue-template-adr.md.j2  pr-template.md.j2
src/git_adr/wiki/: __init__.py  service.py
src/wiki/: github.rs  gitlab.rs  mod.rs  service.rs
tests/: __init__.py  cli_artifacts.rs  cli_attach.rs  cli_config.rs  cli_convert.rs  cli_edit.rs  cli_export.rs  cli_init.rs  cli_link.rs  cli_list.rs  cli_log.rs  cli_new.rs  cli_rm.rs  cli_search.rs  cli_show.rs  cli_stats.rs  cli_supersede.rs  cli_sync.rs  conftest.py  core_integration.rs  functional_tests.rs  test_95_coverage_push.py  test_ai_commands_mocked.py  test_ai_deep.py  test_ai_exception_handling.py  test_ai_providers_deep.py  test_ai_service.py  test_artifact_deep.py  test_cli.py  test_command_coverage.py  test_command_gaps_deep.py  test_commands.py  test_commands_extended.py  test_commands_shared.py  test_completion.py  test_convert_edit_deep.py  test_core.py  test_core_deep.py  test_core_extended.py  test_core_utils.py  (+43 more)
(+4 files in other folders)
