[project]
name = "git-adr"
version = "0.2.3"
description = "Architecture Decision Records management for git repositories using git notes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zircote" }]
keywords = ["git", "adr", "architecture", "decision", "records", "documentation", "git-notes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.0.0",
    "mistune>=3.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "types-PyYAML>=6.0.0",
]
ai = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
]
wiki = [
    "PyGithub>=2.0.0",
    "python-gitlab>=4.0.0",
]
export = [
    "python-docx>=1.0.0",
]
all = [
    "git-adr[ai,wiki,export]",
]

[project.scripts]
git-adr = "git_adr.cli:main"

[project.urls]
Homepage = "https://github.com/zircote/git-adr"
Documentation = "https://github.com/zircote/git-adr#readme"
Repository = "https://github.com/zircote/git-adr.git"
Issues = "https://github.com/zircote/git-adr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_adr"]

# Ruff Configuration
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert allowed in tests
    "PLR2004", # magic values OK in some contexts
    "S603",   # subprocess calls are intentional for git operations
    "S607",   # partial paths for git are intentional
    "PLC0415", # imports inside functions for lazy loading optional deps
    "PLR0913", # CLI commands have many options by design
    "PLR0912", # too many branches - CLI complexity acceptable
    "PLR0915", # too many statements - CLI complexity acceptable
    "B904",   # raise from err - nice to have but not critical
    "S110",   # try-except-pass for graceful error handling
    "SIM102", # nested if for readability
    "SIM117", # nested with for readability
    "ARG001", # unused args kept for API consistency
    "ARG002", # unused args kept for interface consistency
    "RUF022", # __all__ sorted - keeping logical grouping
    "PLR0911", # too many return statements - acceptable in parsers
]

[tool.ruff.lint.isort]
known-first-party = ["git_adr"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG005", "PLR2004", "PLC0415", "S108", "SIM105", "PTH108", "PTH110", "PTH111"]

# mypy Configuration
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "frontmatter.*",
    "mistune.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "langchain_ollama.*",
    "weasyprint.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Bandit Configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
# B101: assert used (tests)
# B110: try-except-pass (intentional for graceful error handling)
# B404: subprocess import (intentional - this is a git wrapper tool)
# B603: subprocess call (intentional - git operations require subprocess)
# B607: partial path (intentional - git should be in PATH)
skips = ["B101", "B110", "B404", "B603", "B607"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

# pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-v"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

# Coverage Configuration
[tool.coverage.run]
source = ["src/git_adr"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 78  # 78%+ achieved. 95% requires deep mocking of editor/network/AI APIs
show_missing = true

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "types-pyyaml>=6.0.12.20250915",
]
